<resources>
    <string name="app_name">StoryDicoding</string>
    <string name="app_logo" translatable="false">App Logo</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="already_a_member">Already a member? </string>
    <string name="confirm_password">Confirm Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="this_field_cannot_be_blank">This field cannot be blank</string>
    <string name="longer_than_8_chars">Password must be 8 characters or more</string>
    <string name="password_match">Both passwords must match</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="login_invalid_error">The email address or password that you\'ve entered doesn\'t match any account.</string>
    <string name="register">Register</string>
    <string name="story_image">Story Image</string>
    <string name="please_wait">Please Wait...</string>
    <string name="email_is_already_taken">Email is already taken</string>
    <string name="user_created_successfully">User Created Successfully</string>
    <string name="registered">Registered</string>
    <string name="account_created_successfully">Your account has been created successfully</string>
    <string name="sign_in">Sign in</string>
    <string name="failed_to_connect">Failed to connect</string>
    <string name="are_you_sure">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="post_story_button">Post Story Button</string>
    <string name="settings">Settings</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="dark_mode">Dark mode</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="are_you_sure_logout">Are you sure you want to logout?</string>
    <string name="add_photo_image">Add photo image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="unable_to_obtain_permission">Unable to obtain permission.</string>
    <string name="upload">Upload</string>
    <string name="choose_a_picture">Choose a Picture</string>
    <string name="add_a_description">Add a description</string>
    <string name="capture_button">Capture Button</string>
    <string name="switch_camera_button">Switch Camera Button</string>
    <string name="failed_to_start_camera">Failed to start camera</string>
    <string name="failed_to_take_photo">Failed to take photo</string>
    <string name="description">Description</string>
    <string name="change_language">Change language</string>
</resources>